# spyops

./: LICENSE  README.md  pyproject.toml
geomio/: __init__.py
geomio/analysis/: extract.py  overlay.py  sql.py  util.py
geomio/crs/: authority.py  util.py
geomio/query/: base.py  extract.py  overlay.py
geomio/shared/: base.py  constant.py  constants.py  crs.py  database.py  element.py  enumeration.py  exceptions.py  feature.py  field.py  geometry.py  hint.py  hints.py  query.py  setting.py  settings.py  util.py  validation.py
gisworks/analysis/: extract.py  overlay.py  util.py
gisworks/crs/: authority.py  util.py
gisworks/environment/: __init__.py  base.py  context.py  core.py  geometry.py  util.py  workspace.py
gisworks/geometry/: config.py  convert.py  extent.py  multi.py  util.py  validate.py  wa.py
gisworks/query/: base.py  extract.py  overlay.py  util.py
gisworks/shared/: base.py  constant.py  database.py  element.py  enumeration.py  field.py  geometry.py  hint.py  records.py  setting.py  util.py  validation.py
spyops/: __init__.py
spyops/analysis/: __init__.py  extract.py  overlay.py  proximity.py  util.py
spyops/conversion/: __init__.py  geopackage.py
spyops/crs/: authority.py  base.py  constant.py  enumeration.py  message.py  transform.py  unit.py  util.py
spyops/environment/: __init__.py  base.py  constant.py  context.py  coordinates.py  core.py  enumeration.py  geometry.py  util.py  workspace.py
spyops/geometry/: attribute.py  buffer.py  centroid.py  check.py  compare.py  config.py  constant.py  convert.py  enumeration.py  extent.py  lookup.py  minimum.py  multi.py  proximity.py  repair.py  segment.py  transform.py  util.py  validate.py  vertex.py  wa.py
spyops/management/: __init__.py  feature_class.py  features.py  fields.py  general.py  generalization.py  indexes.py  projections.py  table.py  util.py  workspace.py
spyops/query/: base.py  base.pyi  overlay.py  planar.py
spyops/shared/: base.py  constant.py  database.py  element.py  enumeration.py  exception.py  field.py  hint.py  keywords.py  records.py  sql.py  stats.py  util.py  validation.py
spyops/validation/: __init__.py  base.py  container.py  crs.py  element.py  enumish.py  field.py  range.py  result.py  setting.py
tests/: conftest.py  constants.py  pytest.ini  util.py
tests/analysis/: extract_test.py  overlay_test.py  proximity_test.py  sql_test.py  util_test.py
tests/conversion/: geopackage_test.py
tests/crs/: authority_test.py  transform_test.py  unit_test.py  util_test.py
tests/environment/: base_test.py  context_test.py  coordinates_test.py  core_test.py  geometry_test.py  util_test.py  workspace_test.py
tests/geometry/: attribute_test.py  buffer_test.py  centroid_test.py  check_test.py  compare_test.py  config_test.py  convert_test.py  extent_test.py  left_test.py  minimum_test.py  multi_test.py  proximity_test.py  repair_test.py  segment_test.py  transform_test.py  util_test.py  validate_test.py  vertex_test.py
tests/management/: feature_class_test.py  features_test.py  fields_test.py  general_test.py  generalization_test.py  indexes_test.py  projections_test.py  table_test.py  util_test.py  workspace_test.py
tests/query/: base_test.py  extract_test.py  overlay_test.py  planar_test.py
tests/shared/: base_test.py  (+12 more)
(+32 files in other folders)
