[project]
name = "geomio"
version = "0.0.1"
description = "Geometry Analysis, Operations, and Management for GeoPackages"
readme = "README.md"
authors = [{ name = "Integrated Informatics (USA) Inc.", email = "contact@integrated-informatics.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["geopackage", "geometry", "gis", "spatial", "analysis"]
requires-python = ">=3.11"
dependencies = [
    "fudgeo>=1.4.1",
    "numpy>=2.3.5",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
