[project]
name = "spyops"
version = "0.0.1"
description = """\
    Spatial Python Operations (SPyOps) -- an evolving collection of GIS Analysis, \
    Spatial Statistics, Spatial Operations, and Spatial Data Management capabilities.\
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics (USA) Inc.", email = "contact@integrated-informatics.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["geopackage", "geometry", "gis", "spatial", "operations", "analysis"]
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.6.0",
    "fudgeo>=1.5.7",
    "numpy>=2.4.4",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
